exports[`require-mock-timers-apis > invalid(1): import {test, mock} from 'node:test';\nmock.timers.enable(); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable();

`;

exports[`require-mock-timers-apis > invalid(1): import {test, mock} from 'node:test';\nmock.timers.enable(); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(10): import {test, mock} from 'node:test';\nmock.timers.enable({now: 1000}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({now: 1000});

`;

exports[`require-mock-timers-apis > invalid(10): import {test, mock} from 'node:test';\nmock.timers.enable({now: 1000}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({now: 1000});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(11): import {test, mock} from 'node:test';\nmock.timers.enable({apis: undefined}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: undefined});

`;

exports[`require-mock-timers-apis > invalid(11): import {test, mock} from 'node:test';\nmock.timers.enable({apis: undefined}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: undefined});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(12): import {test, mock} from 'node:test';\nmock.timers.enable({apis: null}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: null});

`;

exports[`require-mock-timers-apis > invalid(12): import {test, mock} from 'node:test';\nmock.timers.enable({apis: null}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: null});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(13): import {test, mock} from 'node:test';\nmock.timers.enable({apis: false}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: false});

`;

exports[`require-mock-timers-apis > invalid(13): import {test, mock} from 'node:test';\nmock.timers.enable({apis: false}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: false});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(14): import {test, mock} from 'node:test';\nmock.timers.enable({apis: 0}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: 0});

`;

exports[`require-mock-timers-apis > invalid(14): import {test, mock} from 'node:test';\nmock.timers.enable({apis: 0}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: 0});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(15): import {test, mock} from 'node:test';\nmock.timers.enable({apis: \"\"}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: ""});

`;

exports[`require-mock-timers-apis > invalid(15): import {test, mock} from 'node:test';\nmock.timers.enable({apis: \"\"}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: ""});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(16): import {test, mock} from 'node:test';\nmock.timers.enable({...timerOptions}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({...timerOptions});

`;

exports[`require-mock-timers-apis > invalid(16): import {test, mock} from 'node:test';\nmock.timers.enable({...timerOptions}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({...timerOptions});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(17): import {test, mock} from 'node:test';\nmock.timers.enable({apis: [\"setTimeout\"], ...timerOptions}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: ["setTimeout"], ...timerOptions});

`;

exports[`require-mock-timers-apis > invalid(17): import {test, mock} from 'node:test';\nmock.timers.enable({apis: [\"setTimeout\"], ...timerOptions}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: ["setTimeout"], ...timerOptions});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(18): import {test, mock} from 'node:test';\nmock.timers.enable({apis: [\"setTimeout\"], apis: undefined}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: ["setTimeout"], apis: undefined});

`;

exports[`require-mock-timers-apis > invalid(18): import {test, mock} from 'node:test';\nmock.timers.enable({apis: [\"setTimeout\"], apis: undefined}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: ["setTimeout"], apis: undefined});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(19): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.mock.timers.enable(); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(19): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { t.mock.timers.enable(); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(2): import {test, mock} from 'node:test';\nmock.timers.enable({}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({});

`;

exports[`require-mock-timers-apis > invalid(2): import {test, mock} from 'node:test';\nmock.timers.enable({}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({});
    | ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(20): import {test, mock} from 'node:test';\ntest(\"a\", {timeout: 1000}, t => { t.mock.timers.enable(); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", {timeout: 1000}, t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(20): import {test, mock} from 'node:test';\ntest(\"a\", {timeout: 1000}, t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", {timeout: 1000}, t => { t.mock.timers.enable(); });
    |                                   ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(21): import {test, mock} from 'node:test';\ntest(\"a\", function (t) { t.mock.timers.enable(); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", function (t) { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(21): import {test, mock} from 'node:test';\ntest(\"a\", function (t) { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", function (t) { t.mock.timers.enable(); });
    |                          ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(22): import {test, mock} from 'node:test';\ntest(\"a\", (t = fallback) => { t.mock.timers.enable(); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", (t = fallback) => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(22): import {test, mock} from 'node:test';\ntest(\"a\", (t = fallback) => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", (t = fallback) => { t.mock.timers.enable(); });
    |                               ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(23): import {it} from 'node:test';\nit(\"a\", t => { t.mock.timers.enable(); }); 1`] = `

  1 | import {it} from 'node:test';
  2 | it("a", t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(23): import {it} from 'node:test';\nit(\"a\", t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it("a", t => { t.mock.timers.enable(); });
    |                ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(24): import test from 'node:test';\ntest(\"a\", t => { t.mock.timers.enable(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("a", t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(24): import test from 'node:test';\ntest(\"a\", t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("a", t => { t.mock.timers.enable(); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(25): import {test, mock} from 'node:test';\ntest.only(\"a\", t => { t.mock.timers.enable(); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test.only("a", t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(25): import {test, mock} from 'node:test';\ntest.only(\"a\", t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test.only("a", t => { t.mock.timers.enable(); });
    |                       ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(26): import {test, mock} from 'node:test';\n(test as typeof test)(\"a\", t => { t.mock.timers.enable(); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | (test as typeof test)("a", t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(26): import {test, mock} from 'node:test';\n(test as typeof test)(\"a\", t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | (test as typeof test)("a", t => { t.mock.timers.enable(); });
    |                                   ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(27): import {test, mock} from 'node:test';\ntest(\"a\", t => { const fn = () => { t.mock.timers.enable(); }; fn(); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { const fn = () => { t.mock.timers.enable(); }; fn(); });

`;

exports[`require-mock-timers-apis > invalid(27): import {test, mock} from 'node:test';\ntest(\"a\", t => { const fn = () => { t.mock.timers.enable(); }; fn(); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { const fn = () => { t.mock.timers.enable(); }; fn(); });
    |                                     ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(28): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.test(\"b\", subtest => { subtest.mock.timers.enable({now: 1000}); }); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { t.test("b", subtest => { subtest.mock.timers.enable({now: 1000}); }); });

`;

exports[`require-mock-timers-apis > invalid(28): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.test(\"b\", subtest => { subtest.mock.timers.enable({now: 1000}); }); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { t.test("b", subtest => { subtest.mock.timers.enable({now: 1000}); }); });
    |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(29): import {test, mock} from 'node:test';\ntest(\"a\", t => { (t as TestContext).test(\"b\", subtest => { subtest.mock.timers.enable(); }); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { (t as TestContext).test("b", subtest => { subtest.mock.timers.enable(); }); });

`;

exports[`require-mock-timers-apis > invalid(29): import {test, mock} from 'node:test';\ntest(\"a\", t => { (t as TestContext).test(\"b\", subtest => { subtest.mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { (t as TestContext).test("b", subtest => { subtest.mock.timers.enable(); }); });
    |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(3): import {test, mock} from 'node:test';\nmock.timers.enable(undefined); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable(undefined);

`;

exports[`require-mock-timers-apis > invalid(3): import {test, mock} from 'node:test';\nmock.timers.enable(undefined); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable(undefined);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(30): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.test(\"b\", (subtest = fallback) => { subtest.mock.timers.enable(); }); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { t.test("b", (subtest = fallback) => { subtest.mock.timers.enable(); }); });

`;

exports[`require-mock-timers-apis > invalid(30): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.test(\"b\", (subtest = fallback) => { subtest.mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { t.test("b", (subtest = fallback) => { subtest.mock.timers.enable(); }); });
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(31): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.test(\"b\", subtest => { t.mock.timers.enable(); }); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { t.test("b", subtest => { t.mock.timers.enable(); }); });

`;

exports[`require-mock-timers-apis > invalid(31): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.test(\"b\", subtest => { t.mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { t.test("b", subtest => { t.mock.timers.enable(); }); });
    |                                           ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(32): import {test, getTestContext} from 'node:test';\ntest(\"a\", () => { getTestContext().mock.timers.enable(); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test("a", () => { getTestContext().mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(32): import {test, getTestContext} from 'node:test';\ntest(\"a\", () => { getTestContext().mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test("a", () => { getTestContext().mock.timers.enable(); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(33): import {test, getTestContext as context} from 'node:test';\ntest(\"a\", () => { context().mock.timers.enable({now: 1000}); }); 1`] = `

  1 | import {test, getTestContext as context} from 'node:test';
  2 | test("a", () => { context().mock.timers.enable({now: 1000}); });

`;

exports[`require-mock-timers-apis > invalid(33): import {test, getTestContext as context} from 'node:test';\ntest(\"a\", () => { context().mock.timers.enable({now: 1000}); }); 2`] = `

Message:
  1 | import {test, getTestContext as context} from 'node:test';
> 2 | test("a", () => { context().mock.timers.enable({now: 1000}); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(34): import * as nodeTest from 'node:test';\nnodeTest.test(\"a\", () => { nodeTest.getTestContext().mock.timers.enable(); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("a", () => { nodeTest.getTestContext().mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(34): import * as nodeTest from 'node:test';\nnodeTest.test(\"a\", () => { nodeTest.getTestContext().mock.timers.enable(); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("a", () => { nodeTest.getTestContext().mock.timers.enable(); });
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(35): import test from 'node:test';\ntest(\"a\", () => { test.getTestContext().mock.timers.enable(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("a", () => { test.getTestContext().mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(35): import test from 'node:test';\ntest(\"a\", () => { test.getTestContext().mock.timers.enable(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("a", () => { test.getTestContext().mock.timers.enable(); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(36): import {test, getTestContext} from 'node:test';\ntest(\"a\", () => { getTestContext()!.mock.timers.enable(); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test("a", () => { getTestContext()!.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(36): import {test, getTestContext} from 'node:test';\ntest(\"a\", () => { getTestContext()!.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test("a", () => { getTestContext()!.mock.timers.enable(); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(37): import {test, getTestContext} from 'node:test';\ntest(\"a\", () => { (getTestContext() as TestContext).mock.timers.enable({now: 1000}); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test("a", () => { (getTestContext() as TestContext).mock.timers.enable({now: 1000}); });

`;

exports[`require-mock-timers-apis > invalid(37): import {test, getTestContext} from 'node:test';\ntest(\"a\", () => { (getTestContext() as TestContext).mock.timers.enable({now: 1000}); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test("a", () => { (getTestContext() as TestContext).mock.timers.enable({now: 1000}); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(38): import {test, mock} from 'node:test';\n(mock as typeof mock).timers.enable(); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | (mock as typeof mock).timers.enable();

`;

exports[`require-mock-timers-apis > invalid(38): import {test, mock} from 'node:test';\n(mock as typeof mock).timers.enable(); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | (mock as typeof mock).timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(39): import test from 'node:test';\n(test as typeof test).mock.timers.enable({now: 1000}); 1`] = `

  1 | import test from 'node:test';
  2 | (test as typeof test).mock.timers.enable({now: 1000});

`;

exports[`require-mock-timers-apis > invalid(39): import test from 'node:test';\n(test as typeof test).mock.timers.enable({now: 1000}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | (test as typeof test).mock.timers.enable({now: 1000});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(4): import {test, mock} from 'node:test';\nmock.timers.enable(void 0); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable(void 0);

`;

exports[`require-mock-timers-apis > invalid(4): import {test, mock} from 'node:test';\nmock.timers.enable(void 0); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable(void 0);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(40): import test from 'node:test';\ntest(\"a\", () => { (test as typeof test).getTestContext().mock.timers.enable(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("a", () => { (test as typeof test).getTestContext().mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(40): import test from 'node:test';\ntest(\"a\", () => { (test as typeof test).getTestContext().mock.timers.enable(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("a", () => { (test as typeof test).getTestContext().mock.timers.enable(); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(41): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.mock.timers.enable(); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(41): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(t => { t.mock.timers.enable(); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(42): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.mock.timers.enable(); }, {timeout: 1000}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { t.mock.timers.enable(); }, {timeout: 1000});

`;

exports[`require-mock-timers-apis > invalid(42): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.mock.timers.enable(); }, {timeout: 1000}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(t => { t.mock.timers.enable(); }, {timeout: 1000});
    |                   ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(43): import {beforeEach} from 'node:test';\nbeforeEach((t = fallback) => { t.mock.timers.enable(); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach((t = fallback) => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(43): import {beforeEach} from 'node:test';\nbeforeEach((t = fallback) => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach((t = fallback) => { t.mock.timers.enable(); });
    |                                ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(44): import * as nodeTest from 'node:test';\nnodeTest.beforeEach(t => { t.mock.timers.enable(); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.beforeEach(t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(44): import * as nodeTest from 'node:test';\nnodeTest.beforeEach(t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.beforeEach(t => { t.mock.timers.enable(); });
    |                            ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(45): import test from 'node:test';\ntest.beforeEach(t => { t.mock.timers.enable(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test.beforeEach(t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(45): import test from 'node:test';\ntest.beforeEach(t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.beforeEach(t => { t.mock.timers.enable(); });
    |                        ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(46): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); }); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); }); });

`;

exports[`require-mock-timers-apis > invalid(46): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); }); });
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(47): import {test, mock} from 'node:test';\ntest(\"a\", t => { (t as TestContext).beforeEach(hookContext => { hookContext.mock.timers.enable(); }); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { (t as TestContext).beforeEach(hookContext => { hookContext.mock.timers.enable(); }); });

`;

exports[`require-mock-timers-apis > invalid(47): import {test, mock} from 'node:test';\ntest(\"a\", t => { (t as TestContext).beforeEach(hookContext => { hookContext.mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { (t as TestContext).beforeEach(hookContext => { hookContext.mock.timers.enable(); }); });
    |                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(48): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); }, {timeout: 1000}); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); }, {timeout: 1000}); });

`;

exports[`require-mock-timers-apis > invalid(48): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); }, {timeout: 1000}); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); }, {timeout: 1000}); });
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(49): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.test(\"b\", subtest => { subtest.beforeEach(hookContext => { hookContext.mock.timers.enable(); }); }); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { t.test("b", subtest => { subtest.beforeEach(hookContext => { hookContext.mock.timers.enable(); }); }); });

`;

exports[`require-mock-timers-apis > invalid(49): import {test, mock} from 'node:test';\ntest(\"a\", t => { t.test(\"b\", subtest => { subtest.beforeEach(hookContext => { hookContext.mock.timers.enable(); }); }); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { t.test("b", subtest => { subtest.beforeEach(hookContext => { hookContext.mock.timers.enable(); }); }); });
    |                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(5): import {test, mock} from 'node:test';\nmock.timers.enable([\"setTimeout\"]); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable(["setTimeout"]);

`;

exports[`require-mock-timers-apis > invalid(5): import {test, mock} from 'node:test';\nmock.timers.enable([\"setTimeout\"]); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable(["setTimeout"]);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(50): import * as nodeTest from 'node:test';\nnodeTest.test(\"a\", t => { t.mock.timers.enable(); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("a", t => { t.mock.timers.enable(); });

`;

exports[`require-mock-timers-apis > invalid(50): import * as nodeTest from 'node:test';\nnodeTest.test(\"a\", t => { t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("a", t => { t.mock.timers.enable(); });
    |                           ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(51): import {test, mock} from 'node:test';\ntest.mock.timers.enable(); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test.mock.timers.enable();

`;

exports[`require-mock-timers-apis > invalid(51): import {test, mock} from 'node:test';\ntest.mock.timers.enable(); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test.mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(52): import {it as spec} from 'node:test';\nspec.mock.timers.enable({now: 1000}); 1`] = `

  1 | import {it as spec} from 'node:test';
  2 | spec.mock.timers.enable({now: 1000});

`;

exports[`require-mock-timers-apis > invalid(52): import {it as spec} from 'node:test';\nspec.mock.timers.enable({now: 1000}); 2`] = `

Message:
  1 | import {it as spec} from 'node:test';
> 2 | spec.mock.timers.enable({now: 1000});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(53): import * as nodeTest from 'node:test';\nnodeTest.mock.timers.enable(); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.mock.timers.enable();

`;

exports[`require-mock-timers-apis > invalid(53): import * as nodeTest from 'node:test';\nnodeTest.mock.timers.enable(); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(54): import test from 'node:test';\ntest.mock.timers.enable({now: 1000}); 1`] = `

  1 | import test from 'node:test';
  2 | test.mock.timers.enable({now: 1000});

`;

exports[`require-mock-timers-apis > invalid(54): import test from 'node:test';\ntest.mock.timers.enable({now: 1000}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.mock.timers.enable({now: 1000});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(55): import {test, mock as testMock} from 'node:test';\ntestMock.timers.enable(); 1`] = `

  1 | import {test, mock as testMock} from 'node:test';
  2 | testMock.timers.enable();

`;

exports[`require-mock-timers-apis > invalid(55): import {test, mock as testMock} from 'node:test';\ntestMock.timers.enable(); 2`] = `

Message:
  1 | import {test, mock as testMock} from 'node:test';
> 2 | testMock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(56): import {test, mock} from 'node:test';\nmock.timers.enable(({} as {now?: number})); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable(({} as {now?: number}));

`;

exports[`require-mock-timers-apis > invalid(56): import {test, mock} from 'node:test';\nmock.timers.enable(({} as {now?: number})); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable(({} as {now?: number}));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(57): import {test, mock} from 'node:test';\nmock.timers.enable({apis: (undefined as string[] | undefined)}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: (undefined as string[] | undefined)});

`;

exports[`require-mock-timers-apis > invalid(57): import {test, mock} from 'node:test';\nmock.timers.enable({apis: (undefined as string[] | undefined)}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: (undefined as string[] | undefined)});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(6): import {test, mock} from 'node:test';\nmock.timers.enable(true); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable(true);

`;

exports[`require-mock-timers-apis > invalid(6): import {test, mock} from 'node:test';\nmock.timers.enable(true); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable(true);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(7): import {test, mock} from 'node:test';\nmock.timers.enable(\"setTimeout\"); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable("setTimeout");

`;

exports[`require-mock-timers-apis > invalid(7): import {test, mock} from 'node:test';\nmock.timers.enable(\"setTimeout\"); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable("setTimeout");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(8): import {test, mock} from 'node:test';\nmock.timers.enable(\`setTimeout\`); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable(\`setTimeout\`);

`;

exports[`require-mock-timers-apis > invalid(8): import {test, mock} from 'node:test';\nmock.timers.enable(\`setTimeout\`); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable(\`setTimeout\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;

exports[`require-mock-timers-apis > invalid(9): import {test, mock} from 'node:test';\nconst api = \"setTimeout\";\nmock.timers.enable(\`\${api}\`); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | const api = "setTimeout";
  3 | mock.timers.enable(\`\${api}\`);

`;

exports[`require-mock-timers-apis > invalid(9): import {test, mock} from 'node:test';\nconst api = \"setTimeout\";\nmock.timers.enable(\`\${api}\`); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
  2 | const api = "setTimeout";
> 3 | mock.timers.enable(\`\${api}\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` should explicitly specify the \`apis\` option to avoid unexpectedly mocking \`Date\`.

`;
